src/test/resources/valid_programs/precedences__arithmetic_higher_than_comparison.notc
// Should not print anything

void main() {
    if ( 3 - 3  >  2) printInt(1);
    if ( 2 / 2  >= 2) printInt(1);
    if ( 1 + 0  <  1) printInt(1);
    if ( 3 * 3  <= 3) printInt(1);
    if (15 % 5  == 5) printInt(1);
    if ( 1 + 3  != 4) printInt(1);
}
