src/test/resources/semantic_errors/string_postincr.notc
void main() {
    string s = "1";
    s++;
}
